# peekai

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
examples/: demo_agent.py  demo_multi_agent.py
src/peekai/: __init__.py
src/peekai/cli/: __init__.py  banner.py  console.py  main.py
src/peekai/cli/commands/: clear.py  list_traces.py  map_trace.py  replay.py  stats.py  ui.py  view.py
src/peekai/core/: __init__.py  costs.py  models.py  redaction.py  storage.py  tracer.py
src/peekai/patches/: __init__.py  _stream.py  anthropic_patch.py  litellm_patch.py  openai_patch.py  registry.py
src/peekai/replay/: __init__.py  engine.py
src/peekai/ui/: __init__.py  app.py  styles.py
tests/: __init__.py  test_costs.py  test_init.py  test_redaction.py  test_replay.py  test_storage.py  test_storage_security.py  test_streaming.py  test_tracer.py
