[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peekai"
version = "0.1.0"
description = "Lightweight, local-first observability and debugging for Python AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Oussema Khorchani", email = "oussama.khorchany@gmail.com" }
]
keywords = ["ai", "agents", "observability", "tracing", "llm", "openai", "anthropic", "debugging", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
litellm = ["litellm>=1.40.0"]
all = ["openai>=1.0.0", "anthropic>=0.25.0", "litellm>=1.40.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
peekai = "peekai.cli.main:app"

[project.urls]
Homepage = "https://github.com/peekai/peekai"
Repository = "https://github.com/peekai/peekai"
Issues = "https://github.com/peekai/peekai/issues"
Changelog = "https://github.com/peekai/peekai/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/peekai"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501 (line too long) is ignored in UI, CLI, and replay files because
# inline HTML strings and Rich markup cannot be split without breaking output.
per-file-ignores = { "src/peekai/ui/*.py" = ["E501"], "src/peekai/cli/**/*.py" = ["E501"], "src/peekai/replay/*.py" = ["E501"], "src/peekai/core/*.py" = ["E501"] }

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/peekai"]

# pandas ships without type stubs in this project's environment; the UI only
# uses it for display tables, so silence the missing-stub error.
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
